BUmped also plugin to jdk11